--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,9 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+# .gitignore
+.env
+
 # 인스타그램 계정 목록
 app/services/instagram/data/account_list.json
 app/services/instagram/data/ig_login_state.json
