--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
-; [alembic]
+[alembic]
 ; # The directory where Alembic should store migrations.
-; script_location = app/migrations
+script_location = app/migrations
 
 ; # Use placeholders for the database URL
 ; sqlalchemy.url = mysql+pymysql://%(DB_USER)s:%(DB_PASSWORD)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s
