--- a/alembic.ini
+++ b/alembic.ini
@@ -3,8 +3,7 @@
 script_location = app/migrations
 
 ; # Use placeholders for the database URL
-; sqlalchemy.url = mysql+pymysql://%(DB_USER)s:%(DB_PASSWORD)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s
-
+; sqlalchemy.url = mysql+pymysql://root:000000@localhost:3306/indie_app
 ; [loggers]
 ; keys = root,sqlalchemy,alembic
 
