작업 내용 설명

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ JWT_SECRET_KEY=6f3e9b29edb9e5c8bf1a688e3d0cf0569d077e9ff2f06a
 
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=indie_app   
+DB_NAME=indie_capdi
 DB_USER=root        
-DB_PASSWORD=1234
+DB_PASSWORD=jin31008!
