메시지 작성

--- a/.env
+++ b/.env
@@ -2,8 +2,12 @@ KAKAO_REST_API_KEY=e12ca03c65ef22df33d84f8d491fe924
 KAKAO_REDIRECT_URI=http://localhost:8000/auth/callback
 JWT_SECRET_KEY=6f3e9b29edb9e5c8bf1a688e3d0cf0569d077e9ff2f06a
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=indie_capdi
-DB_USER=root        
-DB_PASSWORD=jin31008!
+
+#DB_HOST=34.47.117.210      # 인스턴스 공용 IP
+DB_HOST=127.0.0.1          # 로컬 프록시 (Cloud SQL Proxy)
+
+DB_USER=root              # MySQL 사용자
+DB_PASSWORD=CTuMuY>qrIdE3
+DB_NAME=modie-app-db      # 방금 만든 데이터베이스 이름
+
+DB_PORT=3307
